--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,3 +1,7 @@
+/* .section {
+    margin-bottom: 32px;
+} */
+
 .wrapper {
     display: flex;
     gap: 40px;
@@ -17,5 +21,4 @@
 
 .cardWrapper {
     margin-top: 18px;
-    
 }
